--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,17 +1,36 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        {
-            "type": "node",
-            "request": "launch",
-            "name": "Launch Program",
-            "skipFiles": [
-                "<node_internals>/**"
-            ],
-            "program": "${file}"
-        }
+      {
+        "type": "node",
+        "request": "launch",
+        "name": "Iniciar proyecto",
+        "runtimeExecutable": "npm",
+        "runtimeArgs": [
+          "start"
+        ],
+        "env": {
+          "NODE_ENV": "development"
+        },
+        "cwd": "${workspaceFolder}",
+        "console": "integratedTerminal",
+        "internalConsoleOptions": "neverOpen"
+      },
+
+      {
+        "type": "node",
+        "request": "launch",
+        "name": "Instalar paquetes",
+        "runtimeExecutable": "npm",
+        "runtimeArgs": [
+          "i"
+        ],
+        "env": {
+          "NODE_ENV": "development"
+        },
+        "cwd": "${workspaceFolder}",
+        "console": "integratedTerminal",
+        "internalConsoleOptions": "neverOpen"
+      }
     ]
-}
+  }
