--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@mui/x-data-grid": "^7.22.2",
+    "@mui/material": "^6.1.8",
+    "@mui/system": "^6.1.8",
+    "@mui/x-data-grid": "^7.22.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
